bdr.BDR.scala.error
Erreur de compilation :
BDR:9: error: ';' expected but 'else' found.
  }  } else if (x=="L"){
       ^BDR:40: error: Unmatched closing brace '}' ignored here
	}
        ^